scalaplugin/src/test/resource/acyclic/src/test/resources/fail/halfpackagecycle/B.scala
package fail.halfpackagecycle

class B extends A
